# raytracer.rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: cargo.yml
benches/: raytracer_benchmark.rs
raytracer/: Cargo.toml
raytracer/src/: lib.rs  main.rs
raytracer/src/renderer/: basic_renderer.rs  gradient_renderer.rs  mod.rs  sphere_renderer.rs  threaded_renderer.rs  utils.rs
raytracer/src/scenes/: complex_scene.rs  cornell_box.rs  legacy_scene.rs  mod.rs  simple_scene.rs  sphere_scene.rs  text_scene.rs  utils.rs
raytracer/src/tests/: mod.rs
raytracer/src/tracer/: bvh_static_node.rs  hit_record.rs  hitable.rs  mod.rs  scatter_record.rs  utils.rs  vec3.rs
raytracer_codegen/: Cargo.toml
raytracer_codegen/src/: lib.rs
src/: lib.rs  main.rs
src/renderer/: basic_renderer.rs  gradient_renderer.rs  internal_renderer.rs  mod.rs  mod_renderer.rs  provider.rs  sphere_renderer.rs  thread_renderer.rs  threaded_renderer.rs  trait_renderer.rs  utils.rs
src/scenes/: complex_scene.rs  cornell_box.rs  legacy_scene.rs  mod.rs  simple_scene.rs
src/tests/: mod.rs
src/tracer/: aabb.rs  bvh_node.rs  camera.rs  hit_record.rs  hitable.rs  mod.rs  randomize.rs  ray.rs  sphere.rs  utils.rs  vec3.rs  world.rs
src/tracer/materials/: dielectric.rs  diffuse_light.rs  isotropic.rs  lambertian.rs  material.rs  metal.rs  mod.rs  surface.rs  textured_lambertian.rs
src/tracer/materials_static/: lambertian.rs
src/tracer/mediums/: constant_medium.rs  mod.rs
src/tracer/objects/: box_entity.rs  mod.rs  rect.rs  sphere.rs
src/tracer/pdf/: mod.rs  (+6 more)
(+29 files in other folders)
